force-app/main/default/objects/User/User.object-meta.xml
<CustomObject>
    <!--    <compactLayoutAssignment>User_Layout</compactLayoutAssignment>
-->
    <!---->
    <sharingModel>Read</sharingModel>
</CustomObject>