force-app/main/default/objects/User/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <formula>Email + &apos; | &apos; +
TEXT(Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional</label>
    <type>Text</type>
</CustomField>