force-app/main/default/objects/User/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <label>Branch Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>