force-app/main/default/objects/User/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <formula>RIGHT(&apos;00000&apos; + SCC_Branch__c,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BranchCode</label>
    <type>Text</type>
</CustomField>