force-app/main/default/objects/User/fields/Email_Sprout__c.field-meta.xml
<CustomField>
    <fullName>Email_Sprout__c</fullName>
    <label>Email Sprout</label>
    <type>Email</type>
</CustomField>