force-app/main/default/objects/User/fields/FinServ__ReferrerScore__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferrerScore__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Referrer Score</description>
    <label>Referrer Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>