force-app/main/default/objects/User/fields/Last_Queue_RO__c.field-meta.xml
<CustomField>
    <fullName>Last_Queue_RO__c</fullName>
    <label>Last Queue RO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>