force-app/main/default/objects/User/fields/NIK__c.field-meta.xml
<CustomField>
    <fullName>NIK__c</fullName>
    <label>NIK</label>
    <length>80</length>
    <type>Text</type>
</CustomField>