force-app/main/default/objects/User/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <label>NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>