force-app/main/default/objects/User/fields/PARENT_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>PARENT_USER_ID__c</fullName>
    <label>PARENT USER ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>