force-app/main/default/objects/User/fields/Rata_rata_penilaian_Bulan_Berjalan__c.field-meta.xml
<CustomField>
    <fullName>Rata_rata_penilaian_Bulan_Berjalan__c</fullName>
    <label>Rata rata penilaian (Bulan Berjalan)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>