force-app/main/default/objects/User/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Islam</fullName>
            </value>
            <value>
                <fullName>Kristen Protestan</fullName>
            </value>
            <value>
                <fullName>Katolik</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Buddha</fullName>
            </value>
            <value>
                <fullName>Konghucu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>