force-app/main/default/objects/User/fields/SCC_Area__c.field-meta.xml
<CustomField>
    <fullName>SCC_Area__c</fullName>
    <label>Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>