force-app/main/default/objects/User/fields/SCC_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Area_Description__c</fullName>
    <label>Area Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>