force-app/main/default/objects/User/fields/SCC_Branch__c.field-meta.xml
<CustomField>
    <fullName>SCC_Branch__c</fullName>
    <label>Branch</label>
    <length>30</length>
    <type>Text</type>
</CustomField>