force-app/main/default/objects/User/fields/SCC_Check_Orgeh__c.field-meta.xml
<CustomField>
    <fullName>SCC_Check_Orgeh__c</fullName>
    <description>Checks if current login User orgeh id is equal to team orgeh id</description>
    <formula>$User.SCC_Orgeh__c = SCC_Orgeh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Orgeh</label>
    <type>Checkbox</type>
</CustomField>