force-app/main/default/objects/User/fields/SCC_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SCC_Cost_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center</label>
    <length>30</length>
    <type>Text</type>
</CustomField>