force-app/main/default/objects/User/fields/SCC_Cost_Center_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Cost_Center_Description__c</fullName>
    <label>Cost Center Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>