force-app/main/default/objects/User/fields/SCC_Division__c.field-meta.xml
<CustomField>
    <fullName>SCC_Division__c</fullName>
    <description>This is to access User admin to maintain users division</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolution Center (SCC)</fullName>
            </value>
            <value>
                <fullName>Card, Digital Lending &amp; Asset (CDD)</fullName>
            </value>
            <value>
                <fullName>Funding &amp; Retail Payment (FST)</fullName>
            </value>
            <value>
                <fullName>Operational Risk (ORD)</fullName>
            </value>
            <value>
                <fullName>Digital Banking (DDB)</fullName>
            </value>
            <value>
                <fullName>Investment Service (INV)</fullName>
            </value>
            <value>
                <fullName>BRILink Network (BRILink)</fullName>
            </value>
            <value>
                <fullName>Application &amp; Operation (APP)</fullName>
            </value>
            <value>
                <fullName>Operational Excellence (OPEX)</fullName>
            </value>
            <value>
                <fullName>Distribution Network (DNR)</fullName>
            </value>
            <value>
                <fullName>Institution Business</fullName>
            </value>
            <value>
                <fullName>International (INT)</fullName>
            </value>
            <value>
                <fullName>Transaction Banking (TRB)</fullName>
            </value>
            <value>
                <fullName>Ultra Micro (UMI)</fullName>
            </value>
            <value>
                <fullName>BRI Timor Leste (Timor Leste KCLN)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>