force-app/main/default/objects/User/fields/SCC_HILFM__c.field-meta.xml
<CustomField>
    <fullName>SCC_HILFM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kode Golongan Jabatan (HILFM)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>