force-app/main/default/objects/User/fields/SCC_HTEXT__c.field-meta.xml
<CustomField>
    <fullName>SCC_HTEXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deskripsi Golongan Jabatan (HTEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>