force-app/main/default/objects/User/fields/SCC_Job_Position_Date__c.field-meta.xml
<CustomField>
    <fullName>SCC_Job_Position_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Position Date</label>
    <type>Date</type>
</CustomField>