force-app/main/default/objects/User/fields/SCC_Orgeh__c.field-meta.xml
<CustomField>
    <fullName>SCC_Orgeh__c</fullName>
    <label>Orgeh</label>
    <length>30</length>
    <type>Text</type>
</CustomField>