force-app/main/default/objects/User/fields/SCC_Orgeh_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Orgeh_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Orgeh Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>