force-app/main/default/objects/User/fields/SCC_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>SCC_Sub_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>