force-app/main/default/objects/User/fields/SCC_Tipe_Unit_Kerja__c.field-meta.xml
<CustomField>
    <fullName>SCC_Tipe_Unit_Kerja__c</fullName>
    <label>Tipe Uker</label>
    <length>10</length>
    <type>Text</type>
</CustomField>