force-app/main/default/objects/User/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section in Team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Section</label>
    <length>80</length>
    <type>Text</type>
</CustomField>