force-app/main/default/objects/User/fields/SITE_CCT__c.field-meta.xml
<CustomField>
    <fullName>SITE_CCT__c</fullName>
    <description>Pemisahan site Agent CCT</description>
    <label>SITE CCT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>