force-app/main/default/objects/User/fields/Test3__c.field-meta.xml
<CustomField>
    <fullName>Test3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>