force-app/main/default/objects/User/fields/Testing_1__c.field-meta.xml
<CustomField>
    <fullName>Testing_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Testing Field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>