force-app/main/default/objects/User/fields/Testing_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Testing_Deploy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Testing Deploy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>