force-app/main/default/objects/User/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <externalId>true</externalId>
    <label>USER ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>