force-app/main/default/objects/User/fields/User_Level__c.field-meta.xml
<CustomField>
    <fullName>User_Level__c</fullName>
    <label>User Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Level</valueSetName>
    </valueSet>
</CustomField>