force-app/main/default/objects/User/validationRules/NFT.validationRule-meta.xml
<ValidationRule>
    <fullName>NFT</fullName>
    <active>false</active>
    <errorConditionFormula>( $Permission.BO_Signer = TRUE &amp;&amp;  $Permission.BO_Checker_NFT = TRUE )|| ( $Permission.BO_Signer = TRUE &amp;&amp; $Permission.BO_Maker_NFT  = TRUE )</errorConditionFormula>
    <errorMessage>Hanya bisa satu permission</errorMessage>
</ValidationRule>