force-app/main/default/objects/User/listViews/Branch.listView-meta.xml
<ListView>
    <fullName>Branch</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>SCC_Branch__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>SCC_Orgeh__c</columns>
    <columns>SCC_Area_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SCC_Branch__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Branch</label>
</ListView>