force-app/main/default/objects/User/listViews/Branch2.listView-meta.xml
<ListView>
    <fullName>Branch2</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>BranchCode__c</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BranchCode__c</field>
        <operation>notEqual</operation>
        <value>00000</value>
    </filters>
    <label>Branch2</label>
    <language>en_US</language>
</ListView>