force-app/main/default/objects/User/listViews/Pusat.listView-meta.xml
<ListView>
    <fullName>Pusat</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Branch Users</value>
    </filters>
    <filters>
        <field>SCC_Tipe_Unit_Kerja__c</field>
        <operation>equals</operation>
        <value>KP</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pusat</label>
    <language>en_US</language>
</ListView>