force-app/main/default/objects/User/listViews/RO.listView-meta.xml
<ListView>
    <fullName>RO</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>BranchCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SCC_Tipe_Unit_Kerja__c</field>
        <operation>equals</operation>
        <value>KW</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>RO</label>
    <language>en_US</language>
</ListView>