force-app/main/default/objects/User/listViews/Sanity_User.listView-meta.xml
<ListView>
    <fullName>Sanity_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>mii.co.id,ibm.com</value>
    </filters>
    <label>Sanity User</label>
</ListView>